--- a/.github/workflows/issues-pinner.yml
+++ b/.github/workflows/issues-pinner.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           echo "$INPUT_SUMMARY"  >> $GITHUB_STEP_SUMMARY;
         env:
-          INPUT_SUMMARY: ${{ format('Issue [\#{2}]({0}/{1}/issues/{2}) should be `{3}`.',
+          INPUT_SUMMARY: ${{ format('Issue [\#{2}]({0}/{1}/issues/{2}) should be `{3}` now.',
                                     github.server_url, github.repository,
                                     github.event.issue.number,
                                     github.event.action) }}
