security: `set-output` cmd deprecated. Use `$GITHUB_OUTPUT` env file
To avoid untrusted logged data to use `save-state` and `set-output` workflow commands without the intention of the workflow author we have introduced a new set of environment files to manage state and output.

Starting 1st June 2023 workflows using `save-state` or `set-output` commands via stdout will fail with an error.

https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/

--- a/.github/workflows/stale-prs.yml
+++ b/.github/workflows/stale-prs.yml
@@ -100,7 +100,7 @@ jobs:
             >> $GITHUB_OUTPUT
           echo $INPUT_JSON  \
             | jq --raw-output '. | length'  \
-            | sed -e 's/^/name=items-len=/'  \
+            | sed -e 's/^/items-len=/'  \
             >> $GITHUB_OUTPUT
         env:
           INPUT_JSON: ${{ steps.stale.outputs.closed-issues-prs }}
